# websockets

./: Makefile
HelloEcho/: echo-client.html  echo-server.go
RendezvousServer/: rendezvous-server.go  tpl.gohtml  ws-client.go
SimpleCommunicationPingPong/: echo-client.html  echo-server.go  tpl.gohtml
form-validation-via-ws/: Cargo.toml
form-validation-via-ws/assets/: index.html
form-validation-via-ws/src/: main.rs
libwebsockets/ws-client-example/: Makefile  README.md
myapp/: app.js
socket.io/: README.md
socket.io/public/: index.html
socket.io/server/: server.js
socket_io_example/: index.html  server.js
websocket_io_example/: index.html  package-lock.json  server.js
websocket_node/: server.js
